--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Tony Chopper</h2>
-                <p class="descricao">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus asperiores fugiat
-                    consequatur sequi tempore voluptas! Soluta voluptatem veniam temporibus nam veritatis aliquam
-                    maiores dolor omnis voluptatibus aut perferendis, ut ipsum.</p>
+                <p class="descricao">Chopper é um rena que ganhou a habilidade de se transformar em humano após comer a Hito Hito no Mi, uma Fruta do Diabo. Ele é o médico dos Piratas do Chapéu de Palha e é extremamente carinhoso e amigável. Chopper é conhecido por sua personalidade tímida e sua voz aguda. Ele possui várias formas humanas e de rena, cada uma com habilidades e características únicas. Chopper tem um grande coração e é leal à tripulação de Luffy.</p>
             </div>
         </div>
 
@@ -32,9 +30,7 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Roronoa Zoro</h2>
-                <p class="descricao">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus asperiores fugiat
-                    consequatur sequi tempore voluptas! Soluta voluptatem veniam temporibus nam veritatis aliquam
-                    maiores dolor omnis voluptatibus aut perferendis, ut ipsum.</p>
+                <p class="descricao">Zoro é o espadachim dos Piratas do Chapéu de Palha e um dos membros mais fortes da tripulação. Ele é conhecido por sua devoção ao caminho do espadachim e sua busca para se tornar o espadachim mais forte do mundo. Zoro luta usando três espadas simultaneamente e é capaz de executar técnicas poderosas. Ele é notável por sua personalidade séria e determinada.</p>
             </div>
         </div>
 
@@ -43,9 +39,7 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Monkey D. Luffy</h2>
-                <p class="descricao">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus asperiores fugiat
-                    consequatur sequi tempore voluptas! Soluta voluptatem veniam temporibus nam veritatis aliquam
-                    maiores dolor omnis voluptatibus aut perferendis, ut ipsum.</p>
+                <p class="descricao">Luffy é o protagonista da série "One Piece" e o capitão dos Piratas do Chapéu de Palha. Ele é conhecido por sua personalidade alegre, ingênua e obstinada. Luffy possui o poder da Gomu Gomu no Mi, uma fruta do diabo que lhe dá a capacidade de esticar seu corpo como se fosse borracha. Seu objetivo é se tornar o Rei dos Piratas e encontrar o tesouro lendário conhecido como One Piece.</p>
             </div>
         </div>
 
@@ -54,9 +48,7 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Nami</h2>
-                <p class="descricao">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus asperiores fugiat
-                    consequatur sequi tempore voluptas! Soluta voluptatem veniam temporibus nam veritatis aliquam
-                    maiores dolor omnis voluptatibus aut perferendis, ut ipsum.</p>
+                <p class="descricao">Nami é a navegadora dos Piratas do Chapéu de Palha e uma especialista em cartografia e navegação. Ela tem uma personalidade astuta e é frequentemente encarregada de traçar o curso da tripulação pelo Grande Line, uma área perigosa do mundo de "One Piece". Nami tem uma história de tragédia em seu passado e tem um forte desejo de criar um mapa do mundo inteiro.</p>
             </div>
         </div>
 
@@ -65,9 +57,7 @@
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome-personagem">Sanji</h2>
-                <p class="descricao">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus asperiores fugiat
-                    consequatur sequi tempore voluptas! Soluta voluptatem veniam temporibus nam veritatis aliquam
-                    maiores dolor omnis voluptatibus aut perferendis, ut ipsum.</p>
+                <p class="descricao">Sanji é o cozinheiro dos Piratas do Chapéu de Palha e também é conhecido por suas habilidades de luta usando as pernas. Ele é um mestre da técnica de combate chamada "Estilo Perna Negra" e pode criar chamas com seus chutes. Sanji é elegante, galanteador e muitas vezes demonstra grande devoção às mulheres. Ele sonha em encontrar o lendário All Blue, onde todos os peixes do mundo se encontram.</p>
             </div>
         </div>
     </main>
